# BuildStages

./: .coveragerc  .editorconfig  .gitignore  .travis-with-toxenv.yml  .travis-working-skeleton.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  appveyor.yml  capsveyor.yml  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
rando/: __init__.py  cli.py
tests/: test_rando.py
