# pyup: ignore file

[metadata]
version = 0.0.1
author = Maintainers
author_email = projects@plus3it.com
long_description = file: README.rst
url = https://github.com/YakDriver/BuildStages
license = Apache Software License 2.0
platforms =
    Linux
    Windows
    Darwin
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities

[options]
install_requires =
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    rando = rando.cli:main

[bdist_wheel]
universal = 1

